[package]
name = "p0nd_os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "p0nd_os"
test = false
bench = false

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
