[package]
name = "p0nd_os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "p0nd_os"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false # disables any testing framework, test == executables

[[test]]
name = "stack_overflow"
harness = false # disables any testing framework, test == executables

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

# This allows the VM to exit in a development environment
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
# `cargo test` considers all error codes other that 0 as failures
# this allows to map our specific code to the correct one
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 150

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


# Since the panic strategy is specified in the os JSON file, we don't need to specify it here.
# the profile used for `cargo build`
# [profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
# [profile.release]
# panic = "abort" # disable stack unwinding on panic
